gccida/c3/cselib_subst_to_values
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_subst_to_values/src/cselib.c:1256:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_subst_to_values/src/cselib.c:1259:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_subst_to_values/src/cselib.c:1311:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = mode_class_0[( unsigned __int8)v8]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_subst_to_values/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cselib_subst_to_values/src/obj/cselib.o] Error 1
